syntax = "proto3";
option csharp_namespace = "acmeat.server.deliverycompany.manager";

package deliverycompany;

service GrpcDeliveryCompany {
  rpc GetDeliveryCompanyById(Id)returns(DeliveryCompany);
  rpc GetDeliveryCompanys(Id) returns (DeliveryCompanyList);
  rpc CreateDeliveryCompany(DeliveryCompany) returns(GeneralResponse);
  rpc UpdateDeliveryCompany(DeliveryCompany) returns (GeneralResponse);
  rpc DeleteDeliveryCompany(DeliveryCompany) returns (GeneralResponse);
  rpc DeleteDeliveryCompanyById(DeliveryCompany) returns (GeneralResponse);
}


message Id{
  int32 id = 1;
}

message GeneralResponse{
  string message=1;
}
message DeliveryCompany{

  int32 Id =1;
  string Address =2;
 
  int32 Price =3;
  bool Available =4;
  string Name=5;


}



message DeliveryCompanyList {
  repeated DeliveryCompany deliverycompanys=1;
}
